# aadvice

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
src/: cli.rs  conf.rs  logger.rs  main.rs  message.rs  parser.rs  service.rs
