[package]
name = "aadvice"
version = "0.1.0"
edition = "2024"

[dependencies]
dbus = "0.9.10"
inotify = { version = "0.11.0", features = ["stream"] }
log = { version = "0.4.29", features = ["std"] }
regex = "1.12.2"

[dev-dependencies]
ntest = "0.9.5"
rand = "0.10.0"

[package.metadata.cross.build]
pre-build = [
    "apt-get update",
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get --assume-yes install libdbus-1-dev pkg-config libc6-dev"
]
